sidebar overflow fix

--- a/UI/pstyles.css
+++ b/UI/pstyles.css
@@ -46,6 +46,7 @@ a:hover {
     position: fixed;
     padding-right: 0;
     width: 25%;
+    overflow: auto;
     z-index: 3;
     text-align: center;
     border-top-left-radius: 2rem;
